2011-04-15  Ben Taylor  <bentaylor.solx86@gmail.com>

Reviewed by Alexey Proskuryakov.

        Fix building with Sun Studio 12: function pointers for extern "C" are treated differently
        https://bugs.webkit.org/show_bug.cgi?id=58508

        Since extern "C" makes a different type (although most compilers ignore that),
        we should be more careful when passing NPAPI callback functions.

        * plugins/npapi.cpp:
        (NPN_PluginThreadAsyncCall):

Canonical link: https://commits.webkit.org/73711@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@83957 268f45cc-cd09-0410-ab3c-d52691b4dbfc